Fix: elements don't overlap graph now

--- a/themes/hugo-coder/assets/scss/_base.scss
+++ b/themes/hugo-coder/assets/scss/_base.scss
@@ -174,6 +174,7 @@ img {
   margin: 0 auto;
   max-width: 90.0rem;
   width: 100%;
+  height: 5%;
   padding-left: 2.0rem;
   padding-right: 2.0rem;
 }
