--- a/themes/hugo-coder/assets/scss/_content.scss
+++ b/themes/hugo-coder/assets/scss/_content.scss
@@ -107,6 +107,8 @@
   //justify-content: center;
   .about {
     //text-align: center;
+    top: 100px;
+    position: relative;
     h1 {
       margin-top: 2.0rem;
       margin-bottom: 0.5rem;
