--- a/themes/hugo-coder/assets/scss/_navigation.scss
+++ b/themes/hugo-coder/assets/scss/_navigation.scss
@@ -1,5 +1,5 @@
 .navigation {
-  height: 6.0rem;
+  height: 1.0rem;
   width: 100%;
   a, span {
     display: inline;
